--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "blogapp",
   "version": "1.0.0",
   "description": "A Blog app created with Typescript",
-  "main": "server.js",
+  "main": "dist/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node dist/index.js",
+    "dev": "ts-node-dev server/index.ts",
+    "build": "tsc"
   },
   "repository": {
     "type": "git",
